--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
 	<script>
 		window.onload = function (){ 
-			window.location.href = 'https://iscelenie-dushi-tela.itsinsta.site/error.html';
+			window.location.href = 'https://iscelenie-dushi-tela.ru/error.html';
 		}
 	</script>
 </body>
