--- a/links/index.html
+++ b/links/index.html
@@ -14,7 +14,7 @@
 
 	<script>
 		window.onload = function (){ 
-			window.location.href = 'https://iscelenie-dushi-tela.itsinsta.site/links.html';
+			window.location.href = 'https://iscelenie-dushi-tela.ru/links.html';
 		}
 	</script>
 </body>
