--- a/main.html
+++ b/main.html
@@ -37,11 +37,11 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#fff">
     
-    <link rel="image_src" href="https://iscelenie-dushi-tela.itsinsta.site/img/og/og.jpg" />
+    <link rel="image_src" href="https://iscelenie-dushi-tela.ru/img/og/og.jpg" />
     <meta name="robots" content="INDEX, FOLLOW" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://iscelenie-dushi-tela.itsinsta.site" />
-    <meta property="og:image" content="https://iscelenie-dushi-tela.itsinsta.site/img/og/og.jpg" />
+    <meta property="og:url" content="https://iscelenie-dushi-tela.ru" />
+    <meta property="og:image" content="https://iscelenie-dushi-tela.ru/img/og/og.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
