--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>Tatiana Ermachkova</title>
+    <title>ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА</title>
 
     <meta name="robots" content="noindex" />
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
@@ -45,7 +45,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
-    <meta property="og:title" content="Tatiana Ermachkova" />
+    <meta property="og:title" content="ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА" />
     <meta property="og:description" content="💎Трансформационные сессии🧿
 💎Лифтинг всего тела💆
 💎Исцеляю душу,тело от травм,страхов🧘
@@ -74,7 +74,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/73078640_396973004538821_5853256172009684992_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=WWIPvp6MWt8AX-3NJhd&oh=ded5ca11291e1b6a3759b74200852f39&oe=5E937EDF" alt="Tatiana Ermachkova">
+							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/73078640_396973004538821_5853256172009684992_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=WWIPvp6MWt8AX-3NJhd&oh=ded5ca11291e1b6a3759b74200852f39&oe=5E937EDF" alt="ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА">
 						</div>
 					</div>
 					<div class="main-sec__txt">
@@ -97,7 +97,7 @@
 							</div>
 						</div>
 						<div class="main-sec__txt-main">
-							<h1>Tatiana Ermachkova</h1>
+							<h1>ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА</h1>
 							<p>💎Трансформационные сессии🧿<br/>💎Лифтинг всего тела💆<br/>💎Исцеляю душу,тело от травм,страхов🧘<br/>💎ЯсноВижу🔮<br/>💎Дарю радость жить🧚<br/>💎Много учусь📚<br/>💎Путешествую</p>
 							<p>
 								<a href="./links.html"><b>Актуальное</b></a>
