--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Tatiana Ermachkova</title>
+    <title>ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА</title>
     
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/> 
@@ -38,7 +38,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
-    <meta property="og:title" content="Tatiana Ermachkova" />
+    <meta property="og:title" content="ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА" />
     <meta property="og:description" content="счастьяблог счастье доступно каждому психологустькут психологтатьянаермачкова психологпитер психологпо всемумиру психосоматикаболезней исцеляюдушуитело житьвкайф телесныепроцессы" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="iscelenie_dushi_tela" />
@@ -65,7 +65,7 @@
 							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/73078640_396973004538821_5853256172009684992_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=WWIPvp6MWt8AX-3NJhd&oh=ded5ca11291e1b6a3759b74200852f39&oe=5E937EDF" alt="Tatiana Ermachkova"></div>
 							<div class="header__logo-txt">iscelenie_dushi_tela</div>
 						</a>
-						<div class="header__title">Tatiana Ermachkova</div>
+						<div class="header__title">ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА</div>
 					</div>
 				</div>
 			</div>
@@ -190,7 +190,7 @@
 
 			<div class="links-page">
 				<div class="container">
-					<h1 class="links-page-title">Tatiana Ermachkova</h1>
+					<h1 class="links-page-title">ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА</h1>
 
 					<div class="links-page-messagers count-4">
 						<a href="mailto:mailto:tanya_ust-kut@mail.ru" target="_blank" style="
