--- a/stories.html
+++ b/stories.html
@@ -2,7 +2,7 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>Stories. Tatiana Ermachkova</title>
+    <title>Stories. ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА</title>
     
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -35,7 +35,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
-    <meta property="og:title" content="Tatiana Ermachkova" />
+    <meta property="og:title" content="ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА" />
     <meta property="og:description" content="💎Трансформационные сессии🧿
 💎Лифтинг всего тела💆
 💎Исцеляю душу,тело от травм,страхов🧘
@@ -67,7 +67,7 @@
 							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/73078640_396973004538821_5853256172009684992_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=WWIPvp6MWt8AX-3NJhd&oh=ded5ca11291e1b6a3759b74200852f39&oe=5E937EDF" alt="Tatiana Ermachkova" /></div>
 							<div class="header__logo-txt">iscelenie_dushi_tela</div>
 						</div>
-						<div class="header__title">Tatiana Ermachkova</div>
+						<div class="header__title">ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА</div>
 					</div>
 				</div>
 			</div>
