--- a/error.html
+++ b/error.html
@@ -77,7 +77,7 @@
 									<div class="banner__main-item-ring"><i class="fa fa-telegram" aria-hidden="true"></i></div>
 									<div class="banner__main-item-txt">Telegram</div>
 								</a>
-								<a href="mailto:mailto:tanya_ust-kut@mail.ru" target="_blank" 
+								<a href="mailto:tanya_ust-kut@mail.ru" target="_blank" 
 								class="banner__main-item">
 									<div class="banner__main-item-ring"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
 									<div class="banner__main-item-txt">Заявка</div>
