--- a/links.html
+++ b/links.html
@@ -193,7 +193,7 @@
 					<h1 class="links-page-title">ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА</h1>
 
 					<div class="links-page-messagers count-4">
-						<a href="mailto:mailto:tanya_ust-kut@mail.ru" target="_blank" style="
+						<a href="mailto:tanya_ust-kut@mail.ru" target="_blank" style="
 background: #0B3855;
 border: 1px solid #FFFFFF;
 color: #FFFFFF;
