--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="💎Трансформационные сессии🧿
-💎Лифтинг всего тела💆
-💎Исцеляю душу,тело от травм,страхов🧘
-💎ЯсноВижу🔮
-💎Дарю радость жить🧚
-💎Много учусь📚
-💎Путешествую">
+    <meta name="description" content="Здравствуйте.
+
+Я Татьяна Ермачкова. Психолог, энергопрактик, имею способности к ясновидению.
+
+С 2017 года успешно веду свою практическую деятельность с людьми. Как лично, так и онлайн.
+- Помогаю разрешить ситуации во всех сферах жизни.
+- Работаю с метафорическими картами.
+- Исцеляю любые страхи и травмы, прорабатываю убеждения.
+- Провожу телесные процессы Access – лифтинг всего тела, похудение, улучшение зрения, исцеление болезней, опухолей.
+
+После практик со мной клиенты обретают радость жить, успех, веру в себя, ощущают наполненность энергией, душевную гармонию, ясность в голове, значительно улучшают здоровье.
+
+Если Вы хотите позитивных перемен в жизни или есть другой вопрос, пишите, буду рада!">
     <meta name="keywords" content="счастьяблог счастье доступно каждому психологустькут психологтатьянаермачкова психологпитер психологпо всемумиру психосоматикаболезней исцеляюдушуитело житьвкайф телесныепроцессы" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -45,13 +51,19 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА" />
-    <meta property="og:description" content="💎Трансформационные сессии🧿
-💎Лифтинг всего тела💆
-💎Исцеляю душу,тело от травм,страхов🧘
-💎ЯсноВижу🔮
-💎Дарю радость жить🧚
-💎Много учусь📚
-💎Путешествую" />
+    <meta property="og:description" content="Здравствуйте.
+
+Я Татьяна Ермачкова. Психолог, энергопрактик, имею способности к ясновидению.
+
+С 2017 года успешно веду свою практическую деятельность с людьми. Как лично, так и онлайн.
+- Помогаю разрешить ситуации во всех сферах жизни.
+- Работаю с метафорическими картами.
+- Исцеляю любые страхи и травмы, прорабатываю убеждения.
+- Провожу телесные процессы Access – лифтинг всего тела, похудение, улучшение зрения, исцеление болезней, опухолей.
+
+После практик со мной клиенты обретают радость жить, успех, веру в себя, ощущают наполненность энергией, душевную гармонию, ясность в голове, значительно улучшают здоровье.
+
+Если Вы хотите позитивных перемен в жизни или есть другой вопрос, пишите, буду рада!" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="iscelenie_dushi_tela" />
 
@@ -87,7 +99,7 @@
 										target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i> WhatsApp</a></li>
 										<li><a href="tg://resolve?domain=Tatiana_Ermachkova" 
 										target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i> Telegram</a></li>
-										<li><a href="mailto:mailto:tanya_ust-kut@mail.ru"
+										<li><a href="mailto:tanya_ust-kut@mail.ru"
 										target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i> Заявка</a></li>
 										<li><a href="https://www.instagram.com/iscelenie_dushi_tela" 
 										target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
@@ -97,7 +109,7 @@
 						</div>
 						<div class="main-sec__txt-main">
 							<h1>ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА</h1>
-							<p>💎Трансформационные сессии🧿<br/>💎Лифтинг всего тела💆<br/>💎Исцеляю душу,тело от травм,страхов🧘<br/>💎ЯсноВижу🔮<br/>💎Дарю радость жить🧚<br/>💎Много учусь📚<br/>💎Путешествую</p>
+							<p>Здравствуйте.<br/><br/>Я Татьяна Ермачкова. Психолог, энергопрактик, имею способности к ясновидению.<br/><br/>С 2017 года успешно веду свою практическую деятельность с людьми. Как лично, так и онлайн.<br/>- Помогаю разрешить ситуации во всех сферах жизни.<br/>- Работаю с метафорическими картами.<br/>- Исцеляю любые страхи и травмы, прорабатываю убеждения.<br/>- Провожу телесные процессы Access – лифтинг всего тела, похудение, улучшение зрения, исцеление болезней, опухолей.<br/><br/>После практик со мной клиенты обретают радость жить, успех, веру в себя, ощущают наполненность энергией, душевную гармонию, ясность в голове, значительно улучшают здоровье.<br/><br/>Если Вы хотите позитивных перемен в жизни или есть другой вопрос, пишите, буду рада!</p>
 							<p>
 								<a href="./links.html"><b>Актуальное</b></a>
 							</p>
@@ -639,7 +651,7 @@
 						<div class="banner__main-item-txt">Viber</div>
 					</div>
 
-					<a href="mailto:mailto:tanya_ust-kut@mail.ru" target="_blank" 
+					<a href="mailto:tanya_ust-kut@mail.ru" target="_blank" 
 					class="banner__main-item">
 						<div class="banner__main-item-ring"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
 						<div class="banner__main-item-txt">Заявка</div>
