--- a/stories.html
+++ b/stories.html
@@ -36,13 +36,19 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА" />
-    <meta property="og:description" content="💎Трансформационные сессии🧿
-💎Лифтинг всего тела💆
-💎Исцеляю душу,тело от травм,страхов🧘
-💎ЯсноВижу🔮
-💎Дарю радость жить🧚
-💎Много учусь📚
-💎Путешествую" />
+    <meta property="og:description" content="Здравствуйте.
+
+Я Татьяна Ермачкова. Психолог, энергопрактик, имею способности к ясновидению.
+
+С 2017 года успешно веду свою практическую деятельность с людьми. Как лично, так и онлайн.
+- Помогаю разрешить ситуации во всех сферах жизни.
+- Работаю с метафорическими картами.
+- Исцеляю любые страхи и травмы, прорабатываю убеждения.
+- Провожу телесные процессы Access – лифтинг всего тела, похудение, улучшение зрения, исцеление болезней, опухолей.
+
+После практик со мной клиенты обретают радость жить, успех, веру в себя, ощущают наполненность энергией, душевную гармонию, ясность в голове, значительно улучшают здоровье.
+
+Если Вы хотите позитивных перемен в жизни или есть другой вопрос, пишите, буду рада!" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="iscelenie_dushi_tela" />
 
