--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="счастьяблог счастье доступно каждому психологустькут психологтатьянаермачкова психологпитер психологпо всемумиру психосоматикаболезней исцеляюдушуитело житьвкайф телесныепроцессы">
-    <meta name="keywords" content="счастьяблог счастье доступно каждому психологустькут психологтатьянаермачкова психологпитер психологпо всемумиру психосоматикаболезней исцеляюдушуитело житьвкайф телесныепроцессы" />
+    <meta name="description" content="счастья блог счастье доступно каждому психологустькут психолог Татьяна Ермачкова Питер психологпо всемумиру психосоматикаболезней исцеляюдушуитело жить в кайф телесныепроцессы">
+    <meta name="keywords" content="счастья блог счастье доступно каждому психологустькут психолог Татьяна Ермачкова Питер психологпо всемумиру психосоматикаболезней исцеляюдушуитело жить в кайф телесныепроцессы" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,13 +39,28 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="ИСЦЕЛЕНИЕ ДУШИ И ТЕЛА" />
-    <meta property="og:description" content="счастьяблог счастье доступно каждому психологустькут психологтатьянаермачкова психологпитер психологпо всемумиру психосоматикаболезней исцеляюдушуитело житьвкайф телесныепроцессы" />
+    <meta property="og:description" content="счастья блог счастье доступно каждому психологустькут психолог Татьяна Ермачкова Питер психологпо всемумиру психосоматикаболезней исцеляюдушуитело жить в кайф телесныепроцессы" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="iscelenie_dushi_tela" />
 
     <!--modernizr-->
 	<script src="js/vendors/modernizr-custom.js"></script>
 
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(56843860, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/56843860" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -82,11 +97,11 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="stories__slide" title="счастьяблог">
-									<a href="./tags/./schast-yablog.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/schast-yablog.png);"></div>
+								<div class="stories__slide" title="счастья блог">
+									<a href="./tags/./schast-ya-blog.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/schast-ya-blog.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">счастьяблог</div>
+">счастья блог</div>
 									</a>
 								</div>
 							</div>
@@ -109,20 +124,20 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="психологтатьянаермачкова">
-									<a href="./tags/./psikhologtat-yanaermachkova.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/psikhologtat-yanaermachkova.png);"></div>
+								<div class="stories__slide" title="психолог Татьяна Ермачкова">
+									<a href="./tags/./psikholog-tat-yana-ermachkova.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/psikholog-Tat-yana-Ermachkova.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">психологтатьянаермачкова</div>
+">психолог Татьяна Ермачкова</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="психологпитер">
-									<a href="./tags/./psikhologpiter.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/psikhologpiter.png);"></div>
+								<div class="stories__slide" title="психолог Питер">
+									<a href="./tags/./psikholog-piter.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/psikholog-Piter.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">психологпитер</div>
+">психолог Питер</div>
 									</a>
 								</div>
 							</div>
@@ -154,11 +169,11 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="житьвкайф">
-									<a href="./tags/./zhit-vkayf.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zhit-vkayf.png);"></div>
+								<div class="stories__slide" title="жить в кайф">
+									<a href="./tags/./zhit--v-kayf.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/zhit--v-kayf.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">житьвкайф</div>
+">жить в кайф</div>
 									</a>
 								</div>
 							</div>
@@ -198,6 +213,7 @@ background: #0B3855;
 border: 1px solid #FFFFFF;
 color: #FFFFFF;
 "
+								onclick="ym(56843860, 'reachGoal', 'Email'); return true;"
 							class="links-page-messager">
 							<i class="fa fa-envelope-o" aria-hidden="true">
 								</i>Email
@@ -207,6 +223,7 @@ background: #0B3855;
 border: 1px solid #FFFFFF;
 color: #FFFFFF;
 "
+								onclick="ym(56843860, 'reachGoal', 'WhatsApp'); return true;"
 							class="links-page-messager">
 							<i class="fa fa-whatsapp" aria-hidden="true">
 								</i>WhatsApp
@@ -216,6 +233,7 @@ background: #0B3855;
 border: 1px solid #FFFFFF;
 color: #FFFFFF;
 "
+								onclick="ym(56843860, 'reachGoal', 'Telegram'); return true;"
 							class="links-page-messager">
 							<i class="fa fa-telegram" aria-hidden="true">
 								</i>Telegram
@@ -225,6 +243,7 @@ background: #0B3855;
 border: 1px solid #FFFFFF;
 color: #FFFFFF;
 "
+								onclick="ym(56843860, 'reachGoal', 'Instagram'); return true;"
 							class="links-page-messager">
 							<i class="fa fa-instagram" aria-hidden="true">
 								</i>Instagram
@@ -232,26 +251,6 @@ color: #FFFFFF;
 					</div>
 
 					<div class="links-page-list">
-
-						<div style="
-background-color: #0B3855;
-color: #FFFFFF;
-border: 1px solid #FFFFFF;
-" class="links-page-blc">
-							<div class="links-page-blc__title">Узнать больше</div>
-							<div class="links-page-blc__txt">Укажите ваш номер телефона, и мы перезвоним вам.</div>
-							<form action="https://admapi.itsinsta.site/api/profiles/iscelenie_dushi_tela/messages" method="post" class="links-page-blc__form">
-								<input type="tel" name="contact" class="links-page-blc__input" required placeholder="Введите телефон" style="
-border: 1px solid #FFFFFF;
-"/>
-								<button style="
-background-color: #0B3855;
-border: 1px solid #FFFFFF;
-color: #FFFFFF;
-" class="btn links-page-blc__btn">Отправить запрос</button>
-							</form>
-							<div id="leadSent" class="links-page-blc__txt"></div>
-						</div>
 
 
 
@@ -267,6 +266,7 @@ color: #FFFFFF;
 						<a href="https://www.instagram.com/iscelenie_dushi_tela" target="_blank" style="
 color: #0B3855
 "
+								onclick="ym(56843860, 'reachGoal', 'Instagram'); return true;" 
 							class="links-page-soc__link" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					</div>
 					<div class="links-page-footer">
