--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 После практик со мной клиенты обретают радость жить, успех, веру в себя, ощущают наполненность энергией, душевную гармонию, ясность в голове, значительно улучшают здоровье.
 
 Если Вы хотите позитивных перемен в жизни или есть другой вопрос, пишите, буду рада!">
-    <meta name="keywords" content="счастьяблог счастье доступно каждому психологустькут психологтатьянаермачкова психологпитер психологпо всемумиру психосоматикаболезней исцеляюдушуитело житьвкайф телесныепроцессы" />
+    <meta name="keywords" content="счастья блог счастье доступно каждому психологустькут психолог Татьяна Ермачкова Питер психологпо всемумиру психосоматикаболезней исцеляюдушуитело жить в кайф телесныепроцессы" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -97,12 +97,16 @@
 									<div class="main-sec__contacts-btn" id="js-cont-list-btn" onclick="document.getElementById('js-cont-list').classList.toggle('open');">Сообщение</div>
 									<ul class="main-sec__contacts-list">
 										<li><a href="https://wa.me/79246063885" 
+										onclick="ym(56843860, 'reachGoal', 'WhatsApp'); return true;"
 										target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i> WhatsApp</a></li>
 										<li><a href="tg://resolve?domain=Tatiana_Ermachkova" 
+										onclick="ym(56843860, 'reachGoal', 'Telegram'); return true;"
 										target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i> Telegram</a></li>
 										<li><a href="mailto:tanya_ust-kut@mail.ru"
+										onclick="ym(56843860, 'reachGoal', 'Form'); return true;"
 										target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i> Заявка</a></li>
 										<li><a href="https://www.instagram.com/iscelenie_dushi_tela" 
+										onclick="ym(56843860, 'reachGoal', 'Instagram'); return true;"
 										target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
 									</ul>
 								</div>
@@ -125,10 +129,10 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="stories__slide" title="счастьяблог">
-									<a href="./tags/./schast-yablog.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/schast-yablog.png);"></div>
-										<div class="stories__slide-txt">счастьяблог</div>
+								<div class="stories__slide" title="счастья блог">
+									<a href="./tags/./schast-ya-blog.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/schast-ya-blog.png);"></div>
+										<div class="stories__slide-txt">счастья блог</div>
 									</a>
 								</div>
 							</div>
@@ -149,18 +153,18 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="психологтатьянаермачкова">
-									<a href="./tags/./psikhologtat-yanaermachkova.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/psikhologtat-yanaermachkova.png);"></div>
-										<div class="stories__slide-txt">психологтатьянаермачкова</div>
+								<div class="stories__slide" title="психолог Татьяна Ермачкова">
+									<a href="./tags/./psikholog-tat-yana-ermachkova.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/psikholog-Tat-yana-Ermachkova.png);"></div>
+										<div class="stories__slide-txt">психолог Татьяна Ермачкова</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="психологпитер">
-									<a href="./tags/./psikhologpiter.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/psikhologpiter.png);"></div>
-										<div class="stories__slide-txt">психологпитер</div>
+								<div class="stories__slide" title="психолог Питер">
+									<a href="./tags/./psikholog-piter.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/psikholog-Piter.png);"></div>
+										<div class="stories__slide-txt">психолог Питер</div>
 									</a>
 								</div>
 							</div>
@@ -189,10 +193,10 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="житьвкайф">
-									<a href="./tags/./zhit-vkayf.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zhit-vkayf.png);"></div>
-										<div class="stories__slide-txt">житьвкайф</div>
+								<div class="stories__slide" title="жить в кайф">
+									<a href="./tags/./zhit--v-kayf.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/zhit--v-kayf.png);"></div>
+										<div class="stories__slide-txt">жить в кайф</div>
 									</a>
 								</div>
 							</div>
@@ -636,12 +640,14 @@
 				<div class="banner__main-title">Свяжитесь с нами</div>
 				<div class="banner__main-row">
 					<a href="https://wa.me/79246063885" target="_blank" 
+					onclick="ym(56843860, 'reachGoal', 'WhatsApp'); return true;"
 					class="banner__main-item">
 						<div class="banner__main-item-ring"><i class="fa fa-whatsapp" aria-hidden="true"></i></div>
 						<div class="banner__main-item-txt">WhatsApp</div>
 					</a>
 
 					<a href="tg://resolve?domain=Tatiana_Ermachkova" target="_blank" 
+					onclick="ym(56843860, 'reachGoal', 'Telegram'); return true;"
 					class="banner__main-item">
 						<div class="banner__main-item-ring"><i class="fa fa-telegram" aria-hidden="true"></i></div>
 						<div class="banner__main-item-txt">Telegram</div>
@@ -653,12 +659,14 @@
 					</div>
 
 					<a href="mailto:tanya_ust-kut@mail.ru" target="_blank" 
+					onclick="ym(56843860, 'reachGoal', 'Form'); return true;"
 					class="banner__main-item">
 						<div class="banner__main-item-ring"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
 						<div class="banner__main-item-txt">Заявка</div>
 					</a>
 
 					<a href="https://www.instagram.com/iscelenie_dushi_tela" target="_blank" 
+					onclick="ym(56843860, 'reachGoal', 'Instagram'); return true;"
 					class="banner__main-item">
 						<div class="banner__main-item-ring"><i class="fa fa-instagram" aria-hidden="true"></i></div>
 						<div class="banner__main-item-txt">Instagram</div>
@@ -669,6 +677,21 @@
 		</div>			
 	</div>
 
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(56843860, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/56843860" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 	<!--swiper-->
 	<script src="js/vendors/swiper.min.js"></script>
