--- a/links.html
+++ b/links.html
@@ -252,6 +252,26 @@ color: #FFFFFF;
 
 					<div class="links-page-list">
 
+						<div style="
+background-color: #0B3855;
+color: #FFFFFF;
+border: 1px solid #FFFFFF;
+" class="links-page-blc">
+							<div class="links-page-blc__title">Заказать обратный звонок</div>
+							<div class="links-page-blc__txt">Оставьте в этом поле свой телефон, и я перезвоню вам в ближайшее время.</div>
+							<form action="https://admapi.itsinsta.site/api/profiles/iscelenie_dushi_tela/messages" method="post" class="links-page-blc__form">
+								<input type="tel" name="contact" class="links-page-blc__input" required placeholder="Введите телефон" style="
+border: 1px solid #FFFFFF;
+"/>
+								<button style="
+background-color: #0B3855;
+border: 1px solid #FFFFFF;
+color: #FFFFFF;
+" class="btn links-page-blc__btn">Отправить запрос</button>
+							</form>
+							<div id="leadSent" class="links-page-blc__txt"></div>
+						</div>
+
 
 
 						<div class="links-page-btn-pic">
